@@ -4,3 +4,8 @@ from typing import Callable, List
 T = List[int]
 
 C = Callable[[int], None]  # a generic alias not having a doccomment
+
+
+class Class:
+    #: A list of int
+    T = List[int]
